apps/logger/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
#      volumes:
#        - name: shared-image
#          emptyDir: {}
#        - name: shared-volume
#          persistentVolumeClaim:
#            claimName: volume-claim
      containers:
        - name: logger
          image: sokkanen/logger:201b
#          volumeMounts:
#          - name: shared-image
#            mountPath: /app/files
#          - name: shared-volume
#            mountPath: /app/pongs
#        - name: timestamper
#          image: sokkanen/timestamper:110
#          volumeMounts:
#          - name: shared-image
#            mountPath: /app/files
