apps/logger/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-svc
  namespace: logger-namespace
spec:
  type: NodePort # NodePort needed for GKE Ingress. ClusterIP for internal.
  selector:
    app: logger
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
